--- a/adopcion.html
+++ b/adopcion.html
@@ -3,6 +3,7 @@
   <head>
     <title>Animalia</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="Styles/style.css" />
     <link rel="stylesheet" href="Styles/styleAdopcion.css" />
     <link rel="icon" href="Image/dog-logo.png" />
@@ -30,12 +31,12 @@
     </p>
     <!--Contactos-->
     <footer class="bg-contactos">
-      <div>
-        <h5 class="fs-5">Animalia</h5>
-        <p class="fs-6">Twitter: Animalia01COL</p>
-        <p class="fs-6">Facebook: Animalia01COL</p>
-        <p class="fs-6">Intagram: Animalia01COL</p>
-        <p class="fs-6">Número de Contacto: 312 6951747</p>
+      <div class="container-fluid">
+        <h6 class="fs-5">Animalia</h6>
+        <p><i class="bi bi-twitter"> Animalia_COL01</i></p>
+        <p><i class="bi bi-facebook"> Animalia_COL01</i></p>
+        <p><i class="bi bi-instagram"> Animalia_COL01</i></p>
+        <p><i class="bi bi-telephone"> 312 6951747</i></p>
       </div>
     </footer>
   </body>
