--- a/mascotas.html
+++ b/mascotas.html
@@ -3,6 +3,7 @@
   <head>
     <title>Animalia</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="Styles/style.css" />
     <link rel="stylesheet" href="Styles/styleMascotas.css" />
     <link rel="icon" href="Image/dog-logo.png" />
@@ -23,14 +24,48 @@
       <h1>Mascotas</h1>
       <p><strong>¡Los miembros de nuestra familia!</strong></p>
     </div>
+    <p class="pf-textoGeneral">
+      Diversas mascotas hacen parte de la familia en Animalia, nosotros los cuidamos, pero tú eres quien decide darle un
+      hogar y una familia en su vida.
+    </p>
+    <!--Texto Animales-->
+    <h4>Perros</h4>
+    <p>
+      El perro, llamado perro doméstico o can, y en algunos lugares coloquialmente llamado chucho, tuso, choco, entre
+      otros; es un mamífero carnívoro de la familia de los cánidos, que constituye una especie del género Canis.
+    </p>
+    <h4>Gatos</h4>
+    <p>
+      El gato doméstico, llamado más comúnmente gato, y de forma coloquial minino, michino, michi, micho, mizo, miz,
+      morroño o morrongo, y algunos nombres más, es un mamífero carnívoro de la familia Felidae. Es una subespecie
+      domesticada por la convivencia con el ser humano.
+    </p>
+    <h4>Conejos</h4>
+    <p></p>
+    <h4>Hamsters</h4>
+    <p>
+      Los cricetinos son una subfamilia de roedores, conocidos comúnmente como hámsteres. Se han identificado diecinueve
+      especies actuales, agrupadas en siete géneros.
+    </p>
+    <h4>Loros</h4>
+    <p>
+      Los loros se caracterizan por tener un pico curvado, con una mandíbula inferior con cierta movilidad en su
+      conexión con el cráneo y situada en una posición bastante vertical. Además tienen una gran capacidad craneal y son
+      uno de los grupos de aves más inteligentes.
+    </p>
+    <h4>Tortugas</h4>
+    <p>
+      Las tortugas o quelonios forman un orden de reptiles caracterizados por tener un tronco ancho y corto, y un
+      caparazón que protege los órganos internos de su cuerpo.
+    </p>
     <!--Contactos-->
     <footer class="bg-contactos">
-      <div>
-        <h5 class="fs-5">Animalia</h5>
-        <p class="fs-6">Twitter: Animalia01COL</p>
-        <p class="fs-6">Facebook: Animalia01COL</p>
-        <p class="fs-6">Intagram: Animalia01COL</p>
-        <p class="fs-6">Número de Contacto: 312 6951747</p>
+      <div class="container-fluid">
+        <h6 class="fs-5">Animalia</h6>
+        <p><i class="bi bi-twitter"> Animalia_COL01</i></p>
+        <p><i class="bi bi-facebook"> Animalia_COL01</i></p>
+        <p><i class="bi bi-instagram"> Animalia_COL01</i></p>
+        <p><i class="bi bi-telephone"> 312 6951747</i></p>
       </div>
     </footer>
   </body>
